[package]
name = "secret_totp_auth"
version = "0.1.3"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CosmWasm and Secret Network dependencies
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
secret-toolkit-storage = "0.10.0"
serde = { version = "1.0.147", features = ["derive"] }
schemars = "0.8.11"

# Cryptographic dependencies
hmac = "0.12.1"
sha1 = "0.10.5"
base32 = "0.4.0"

[features]
default = []

[dev-dependencies]
cosmwasm-schema = "1.2.2"
cosmwasm-std = { version = "1.2.2", features = ["staking"] }
cosmwasm-vm = { version = "1.2.2", default-features = false }
